--- a/FootbalUni/aboutus.html
+++ b/FootbalUni/aboutus.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
                         <div class="navitem">
-                            <a href="nacionali.html">Националчета</a>
+                            <a href="nacionali.html">Team</a>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
@@ -61,10 +61,6 @@
                         <dl>
                         <dt><img src="images/lubo.jpg" width="100px" weight="100px">Любослав Пирсафов</dt>
                         <dd>Здравейте. Занимавам се с програмиране от около 2 години и реших да уча в Software University,  и съм много доволен от това.Родом съм от Крумовград, но сега живея в София.В свободното си време обичам да играя футбол!</dd>
-                         <dt><img src="http://placekitten.com/g/100px/100px">Ivelin Kirilov</dt>
-                        <dd>ipsum dolor sit amet, consectetur adipisicing elit. Repellendus facere quaerat, corrupti enim. Eveniet, itaque! Et qui aspernatur veritatis consequatur!</dd>
-                         <dt><img src="http://placekitten.com/g/100px/100px">Ivelin Kirilov</dt>
-                        <dd>ipsum dolor sit amet, consectetur adipisicing elit. Repellendus facere quaerat, corrupti enim. Eveniet, itaque! Et qui aspernatur veritatis consequatur!</dd>
                          <dt><img src="http://placekitten.com/g/100px/100px">Ivelin Kirilov</dt>
                         <dd>ipsum dolor sit amet, consectetur adipisicing elit. Repellendus facere quaerat, corrupti enim. Eveniet, itaque! Et qui aspernatur veritatis consequatur!</dd>
                         </dl>
