--- a/FootbalUni/index.html
+++ b/FootbalUni/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
         <div class="color-header">
-            <img src="images/logo.png">
+            <a href="index.html"><img src="images/logo.png"></a>
             </div>
             <div class="row">
             <div id="center">
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
                         <div class="navitem">
-                            <a href="nacionali.html">Националчета</a>
+                            <a href="nacionali.html">Team</a>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
@@ -58,8 +58,14 @@
                 <section class="content">
                     <h1>Добре дошли</h1>
                     <h2>&lt;team DEATHWING&gt;</h2>
-                    <p class="sentences">В нашият сайт ще видите забавни снимки, вицове,<br> видео и аудио ремикси за нашите лектори.</p>
-                    <p class="sentences"><strong>Бог създаде идиотите.<br> Интернет ги направи равни.</strong></p>
+                    <p class="sentences">Представянето на Software University на световното в Бразилия до момента:<br>                        Software University "101" : 1 Mexico !<br>
+                       Software University "11" : 0 Cameroon !<br>
+                       Software University "10" : 1 Croatia !</p>
+                       <p class="softuni">1/8 finals:<br>
+                       Software University "100":3 Netherlands - after penalties !
+                       </p>
+                       <p class="sentences">Note: Only programmers will understand the big results of Software University !</p>
+                    <p class="sentences"><strong>Бог създаде идиотите. Интернет ги направи равни.</strong></p>
                 </section>
             </div>
             </main>
