--- a/FootbalUni/video.html
+++ b/FootbalUni/video.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6">
                             <div class="navitem">
-                                <a href="nacionali.html">Националчета</a>
+                                <a href="nacionali.html">Team</a>
                             </div>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6">
