--- a/FootbalUni/galeriq.html
+++ b/FootbalUni/galeriq.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
                         <div class="navitem">
-                            <a href="nacionali.html">Националчета</a>
+                            <a href="nacionali.html">Team</a>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
@@ -61,6 +61,13 @@
                     <section>
                         <h2>Галерия</h2>
                         <div class="galleria">
+                            <img src="images/dance.png" alt="Team dancing">
+                            <img src="images/svetlinio.png" alt="Svetlinio">
+                            <img src="images/tedinio.png" alt="Tedinio">
+                            <img src="images/vladinio.png" alt="Vladinio">
+                            <img src="images/djuniar.png" alt="Vladinio Junior">
+                            <img src="images/suareeezz.png" alt="Nakov v rolqta na suarez">
+                            <img src="images/robbenn.png" alt="Nakov v simulira kato Robben">
                             <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
                             <img src="images/funny.jpg" alt="little boy browsing">
                             <img src="images/Thisissparta.png" alt="During the Java exam">
