--- a/FootbalUni/nacionali.html
+++ b/FootbalUni/nacionali.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
                         <div class="navitem">
-                            <a href="nacionali.html">Nationals</a>
+                            <a href="nacionali.html">Team</a>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xs-6">
@@ -59,7 +59,7 @@
                             <article>
                                 <dl>
                                     <dt>Светлиньо</dt>
-                                    <dd><img src="images/svetlinio%20copy.png">Светлиньо е капитан на националния отбор на Software University от самото му създаване.Най-голямото му качество е да се напие и така става най-голямата заплаха за противниковата защита.Има силен десен крак както и много груби шпагати.</dd>
+                                    <dd><img src="images/svetlinio.png">Светлиньо е капитан на националния отбор на Software University от самото му създаване.Най-голямото му качество е да се напие и така става най-голямата заплаха за противниковата защита.Има силен десен крак както и много груби шпагати.</dd>
                                 </dl>
                                 <div id="otbor">
                                     Клубен отбор: ФК “ДИВ ПРЪЧ” с.Камена !!!
@@ -70,7 +70,7 @@
                             <article>
                                 <dl>
                                     <dt>Тединьо</dt>
-                                    <dd><img src="images/tedinio%20copy.png">Тединьо е незаменим титуляр в отбора на Software University. Той е централен халф и най-силното му качество е да задържа топката, а след това да даде голов пас на Светлиньо.Много често си изкарва глупави картони, защото обича да псува, а когато напсуваш съдия става лошо...</dd>
+                                    <dd><img src="images/tedinio.png">Тединьо е незаменим титуляр в отбора на Software University. Той е централен халф и най-силното му качество е да задържа топката, а след това да даде голов пас на Светлиньо.Много често си изкарва глупави картони, защото обича да псува, а когато напсуваш съдия става лошо...</dd>
                                 </dl>
                                 <div id="otbor">
                                     Клубен отбор: ФК “ОСТЪР НОЖ” с.Раданово, обл. Велико Търново !!!
@@ -81,7 +81,7 @@
                             <article>
                                 <dl>
                                     <dt>Владиньо</dt>
-                                    <dd><img src="images/vladinio%20copy.png">Владиньо е централен защитник и се слави като един от най-големите таланти в световния футбол.Той също е незаменим титуляр.Наскоро се появи слух, че от Полски Тръмбеж са предложили 100 млн. паунда за неговите услуги, но треньорката им- Бруна Гроздарска е отказала офертата, защото и се сторила скромна.</dd>
+                                    <dd><img src="images/vladinio.png">Владиньо е централен защитник и се слави като един от най-големите таланти в световния футбол.Той също е незаменим титуляр.Наскоро се появи слух, че от Полски Тръмбеж са предложили 100 млн. паунда за неговите услуги, но треньорката им- Бруна Гроздарска е отказала офертата, защото и се сторила скромна.</dd>
                                 </dl>
                                 <div id="otbor">
                                     Клубен отбор: ФК “УЖАС” с. Зетьово!!!
@@ -92,7 +92,7 @@
                             <article>
                                 <dl>
                                     <dt>Владиньо Джуниър</dt>
-                                    <dd><img src="images/djuniar%20copy.png">Владиньо Джуниър остава на заден план заради останлите трима, но той играе не важна част от националния отбот на Software University.Неговото най-силно качество е да гърдира топката, а играта му във въздуха везхитява всички.</dd>
+                                    <dd><img src="images/djuniar.png">Владиньо Джуниър остава на заден план заради останлите трима, но той играе не важна част от националния отбот на Software University.Неговото най-силно качество е да гърдира топката, а играта му във въздуха везхитява всички.</dd>
                                 </dl>
                                 <div id="otbor">
                                     Клубен отбор: ФК “”ДИВА СВИНЯ” с. Цонево !!!
