--- a/FootbalUni/aboutus.html
+++ b/FootbalUni/aboutus.html
@@ -60,7 +60,7 @@
                        <div class="content">
                         <dl>
                         <dt><img src="images/lubo.jpg" width="100px" weight="100px">Любослав Пирсафов</dt>
-                        <dd>Здравейте. Занимавам се с програмиране от около 2 години и реших да уча в Software University,  и съм много доволен от това.Родом съм от Крумовград, но сега живея в София.В свободното си време обичам да играя футбол!</dd>
+                        <dd>HTML, CSS, JS, Футбол, Левски, Манчестър Юнайтед !</dd>
                          <dt><img src="http://placekitten.com/g/100px/100px">Ivelin Kirilov</dt>
                         <dd>ipsum dolor sit amet, consectetur adipisicing elit. Repellendus facere quaerat, corrupti enim. Eveniet, itaque! Et qui aspernatur veritatis consequatur!</dd>
                         </dl>
