--- a/FootballUni/video.html
+++ b/FootballUni/video.html
@@ -61,6 +61,11 @@
                             <section class="youtube-video">
                                 <div class="col-sm-6">
                                     <iframe title="YouTube video player" class="youtube-player" type="text/html"
+                                    width="345" height="250" src="https://www.youtube.com/embed/I95Xc6KCtBk"
+                                    frameborder="1" allowFullScreen></iframe>
+                                </div>
+                                <div class="col-sm-6">
+                                    <iframe title="YouTube video player" class="youtube-player" type="text/html"
                                     width="345" height="250" src="https://www.youtube.com/embed/6ThA5T5Z4xQ"
                                     frameborder="1" allowFullScreen></iframe>
                                 </div>
@@ -71,14 +76,10 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <iframe title="YouTube video player" class="youtube-player" type="text/html"
-                                    width="345" height="250" src="https://www.youtube.com/embed/I5i-LupFIvc"
+                                    width="345" height="250" src="https://www.youtube.com/embed/z_lYhcgAQx8"
                                     frameborder="1" allowFullScreen></iframe>
                                 </div>
-                                <div class="col-sm-6">
-                                    <iframe title="YouTube video player" class="youtube-player" type="text/html"
-                                    width="345" height="250" src="https://www.youtube.com/embed/vqp5vy87D1w"
-                                    frameborder="1" allowFullScreen></iframe>
-                                </div>
+
                             </section>
                         </div>
                     </main>
